# physical-AI-and-humanoid-robotics-book

./: .dockerignore  .eslintignore  .gitignore  .npmignore  .prettierignore  404.html  CONTRIBUTING.md  LICENSE  docusaurus.config.js  index.html  package-lock.json  sidebars.js  sitemap.xml  vercel.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
assets/css/: styles.2f939b82.css  styles.b6cf0a16.css
assets/js/: 0058b4c6.012de962.js  0adab039.5224fbb7.js  0adab039.852cb9ff.js  3441acbd.5639e8fa.js  3441acbd.a0134b62.js  393be207.3c693688.js  4c122429.5aed1717.js  4c122429.aff075af.js  5de68abf.0ab9d05e.js  5de68abf.4e55ce3e.js  6b5eb6d5.77e84b61.js  6b5eb6d5.8b7a5cc1.js  739a4da3.7066212d.js  739a4da3.e82c9658.js  7b694638.d512dbf9.js  7b694638.e67d06ca.js  81b436bf.baa9d8b6.js  a1c90253.2328e8f1.js  a1c90253.eaec32fc.js  ae91298f.a4508efd.js  ae91298f.c6145559.js  bd4ab5af.4eb7f3b0.js  bd4ab5af.6c18bf92.js  c4f5d8e4.2c1a4eed.js  main.086a73e0.js  (+20 more)
backend/: .env.example  README.md  agent.py  app.py  ingestion.py  main.py  pyproject.toml  requirements.txt  retrieve.py
book/: docusaurus.config.js
ci_cd/: embedding_update.yml
docs/: chapter-01.md  chapter-02.md  chapter-03.md  chapter-07.md  chapter-08.md  chapter-10.md  chapter-11.md  chapter-13.md  chapter-15.md
e2e_tests/: rag_chatbot.spec.js
frontend/: DEPLOYMENT.md
markdown-page/: index.html
rag-backend/: .env  alembic.ini  deployment.yaml  requirements.txt  temp_drop_table.py
rag-ingestion/: requirements.txt
static/: diagram-template.md
(+124 files in other folders)
